  # lost (need to be implemented as separate methods) 
       mixinof, instmixinof


incompatible change:
====== 
Class O -parameter {
  {a -default 0}
  {b -default {[cmd 3 4]}} c d 
  {e -default 3} 
  {Self -default [self]}
}
Class Meta -superclass Class
Meta C -superclass O -parameter {a {b -default ""} {c -default 1}}
C c1 ;# c1 has no no default value for "a", before it had
======

2009-06-14 <Gustaf.Neumann@wu-wien.ac.at>
    - fixed potential access to deleted command list item in
      FilterSearchAgain()
    - fixed potential access deleted xotcl object by switching order
      in a condition
    - some minor cleanup for configuration flags

2009-03-19 <Gustaf.Neumann@wu-wien.ac.at>
    * Release of XOTcl 1.6.3

2009-03-19 <Gustaf.Neumann@wu-wien.ac.at>
    - removed references to 1.6.2

2009-03-04 <Gustaf.Neumann@wu-wien.ac.at>
    - re-enable small optimization
    - factor out common code
    - fix compatibility with Tcl 8.4
    - bump version number to 1.6.3

2009-03-03 <Gustaf.Neumann@wu-wien.ac.at>
    - simplify semantics of MixinSeekCurrent and FilterSeekCurrent, improve speed
    - remove necessity to have tclCompile.h
    - improve documentation

2009-03-02 <Gustaf.Neumann@wu-wien.ac.at>
    - some small performance improvements (use CreateHashEntry instead
      of FindHashEntry, remove unneded argument, improve order of long
      and expressions)
    - some code cleanup
    - new methods, when compiled with tcl 8.5;
       + MakeProcError (producing error messages from xotcl methods)
       + PushProcCallFrame (compile method to byte-code)
       The new support allows to call code at the begin of a proc
       without using the old approach based on :xotcl::initProcNS

2009-02-19 <Gustaf.Neumann@wu-wien.ac.at>
    - add comments to var resolution tests for objects without namespaces
    - fixed reference counting
    - removed temporary hacks
    - added CONST to several functions
    - added relative namespace handling
