@@ -91,7 +91,8 @@ static char cmd[] =
 "if {![$i exists $att]} {::xotcl::setinstvar $i $att $default}}\n"
 "unset default}}}\n"
 "createBootstrapAttributeSlots ::xotcl::Class {\n"
-"{__default_superclass ::xotcl::Object}}\n"
+"{__default_superclass ::xotcl::Object}\n"
+"{__default_metaclass ::xotcl::Class}}\n"
 "createBootstrapAttributeSlots ::xotcl::Slot {\n"
 "{name \"[namespace tail [::xotcl::self]]\"}\n"
 "{domain \"[lindex [regexp -inline {^(.*)::slot::[^:]+$} [::xotcl::self]] 1]\"}\n"
@@ -202,7 +203,6 @@ static char cmd[] =
 "::xotcl::Attribute instproc mk_type_checker {} {\n"
 "set __initcmd \"\"\n"
 "if {[::xotcl::my exists type]} {\n"
-"puts stderr \"mktypechecker, type=$type\"\n"
 "::xotcl::my instvar type name\n"
 "if {[::xotcl::Object isclass $type]} {\n"
 "set predicate [subst -nocommands {\n"
