@@ -545,7 +545,7 @@ typedef enum {
     XOTE_ALLOC, XOTE_INIT, XOTE_INSTVAR, XOTE_INTERP, XOTE_AUTONAMES,
     XOTE_ZERO, XOTE_ONE, XOTE_MOVE, XOTE_SELF, XOTE_CLASS, XOTE_RECREATE,
     XOTE_SELF_CLASS, XOTE_SELF_PROC, 
-    XOTE_EXIT_HANDLER, XOTE_DEFAULTSUPERCLASS,
+    XOTE_EXIT_HANDLER, XOTE_DEFAULTSUPERCLASS, XOTE_DEFAULTMETACLASS, 
     XOTE_NON_POS_ARGS_OBJ, XOTE_SETVALUES,
     XOTE_CLEANUP, XOTE_CONFIGURE, XOTE_FILTER, XOTE_INSTFILTER,
     XOTE_INSTPROC, XOTE_PROC, XOTE_INSTFORWARD, XOTE_FORWARD,
@@ -565,7 +565,7 @@ char *XOTclGlobalStrings[] = {
   "alloc", "init", "instvar", "interp", "__autonames",
   "0", "1", "move", "self", "class", "recreate",
   "self class", "self proc", 
-  "__exitHandler", "__default_superclass",
+  "__exitHandler", "__default_superclass", "__default_metaclass",
   "::xotcl::nonposArgs", "setvalues",
   "cleanup", "configure", "filter", "instfilter",
   "instproc", "proc", "instforward", "forward",
